box/deploy-customer-b.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: customer-b
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-web
  namespace: customer-b
  labels:
    app: web
    stage: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      stage: prod
  template:
    metadata:
      labels:
        app: web
        stage: prod
    spec:
      containers:
        - name: front-end
          image: gardnera/canarytester:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: prod-web
  namespace: customer-b
spec:
  selector:
    app: web
    stage: prod
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staging-web
  namespace: customer-b
  labels:
    app: web
    stage: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      stage: staging
  template:
    metadata:
      labels:
        app: web
        stage: staging
    spec:
      containers:
        - name: front-end
          image: gardnera/canarytester:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: staging-web
  namespace: customer-b
spec:
  selector:
    app: web
    stage: staging
  ports:
    - protocol: TCP
      port: 80
